feat: add blocks 2,3,4

--- a/LR4_Position/index.html
+++ b/LR4_Position/index.html
@@ -11,5 +11,21 @@
       <div class="box" id="two">2</div>
       <div class="box" id="three">3</div>  
   </div>
+  <div class="block" id="block2">
+    <div class="box" id="four">4</div>
+    <div class="box" id="five">5</div>
+    <div class="box" id="six">6</div>  
+  </div>
+  <div class="block" id="block3">
+    <div class="box" id="seven">7</div>
+    <div class="box" id="eight">8</div>
+    <div class="box" id="nine">9</div>  
+  </div>
+  <div class="block" id="block4">
+    <div class="box" id="ten">10</div>
+    <div class="box" id="eleven">11</div>
+    <div class="box" id="twelve">12</div>
+  </div> 
+
 </body>
 </html>
