feat: Header is finished, but needs to be updated

--- a/landing/index.html
+++ b/landing/index.html
@@ -38,10 +38,10 @@
             <div class="header__right">
                 <div class="sign">
                     <div class="sign__in">
-                        <a href="#">sign in</a>
+                        <a href="#" class="link1">sign in</a>
                     </div>
-                    <div class="sign__up">
-                        <a href="#">sign up</a>
+                    <div class="sign__up" >
+                        <a href="#" class="link2">sign up</a>
                     </div>
                 </div>
             </div>
