--- a/landing/index.html
+++ b/landing/index.html
@@ -12,7 +12,7 @@
         <header class="header">
             <div class="header__left">
                 <div class="header__logo">
-
+                   <h1 class = "logo"> =</h1>
                 </div>
                 <nav class="menu">
                     <ul class="menu__list">
