--- a/landing/index.html
+++ b/landing/index.html
@@ -11,31 +11,32 @@
     <div class="wrapper">
         <header class="header">
             <div class="header__left">
-                <div class="header__logo">
-                    <hr class="shape1"></hr>
-                    <hr class="shape2"></hr>
+                <div class="left__block">
+                    <div class="header__logo">
+                        <div class="logo__item1"></div>
+                        <div class="logo__item2"></div>
+                    </div>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__items">
+                                <a href="#" class="menu__links">about</a>
+                            </li>
+                            <li class="menu__items">
+                                <a href="#" class="menu__links">gallery</a>
+                            </li>
+                            <li class="menu__items">
+                                <a href="#" class="menu__links">pricing</a>
+                            </li>
+                            <li class="menu__items">
+                                <a href="#" class="menu__links">faq</a>
+                            </li>
+                            <li class="menu__items">
+                                <a href="#" class="menu__links">benefits</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__items">
-                            <a href="#" class="menu__links">about</a>
-                        </li>
-                        <li class="menu__items">
-                            <a href="#" class="menu__links">gallery</a>
-                        </li>
-                        <li class="menu__items">
-                            <a href="#" class="menu__links">pricing</a>
-                        </li>
-                        <li class="menu__items">
-                            <a href="#" class="menu__links">faq</a>
-                        </li>
-                        <li class="menu__items">
-                            <a href="#" class="menu__links">benefits</a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
-
             <div class="header__right">
                 <div class="sign">
                     <div class="sign__in">
