fix: fixed survival text and fixed animation footer

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -84,6 +84,8 @@
               <div class = textimage> <h4>
                 Deer
               </h4>
+
+              
               <small>
                 Naturalist investigation
               </small>
